# python-bazel-ci

./: BUILD  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-project-root  bazel-testlogs
.github/workflows/: ci.yml
scripts/: format.sh  lint.sh
src/: BUILD  math_utils.py  string_utils.py
tests/: BUILD  test_math_utils.py  test_string_utils.py
