module(name = "python_bazel_ci")

# Load rules_python (required for pip_install)
bazel_dep(name = "rules_python", version = "0.25.0")

# Explicitly use pip dependencies
use_extension("@rules_python//python:extensions.bzl", "pip")
pip.install(
    name = "python_deps",
    requirements = "@//:requirements.txt",
)
