module(name = "python_bazel_ci")

# Load rules_python
bazel_dep(name = "rules_python", version = "0.25.0")

# Use pip extension for installing dependencies
use_extension("@rules_python//python/extensions:pip.bzl", "pip")

use_repo(pip, "python_deps")

pip.install(
    requirements = "@//:requirements.txt",
)
